# lang_agent

./: .gitignore  CONFIG_SETUP.md  README.md  requirements.txt
.github/: copilot-instructions.md  thinking.md
agent/: .env.example  __init__.py  agent.py  config.py  llm_provider.py  main.py  memory_strategy.py  pyproject.toml  requirements.txt  tool_provider.py  utils.py
agent/mcp_client/: __init__.py  client.py
agent/tools/: __init__.py
agent/tools/local/: __init__.py  calculator.py  text_processor.py
agent/trajectory/: __init__.py  example_usage.py  langgraph_hook.py  message_processor.py  react_trajectory_hook.py  trace_context.py  trajectory_backend.py  trajectory_recorder.py  trajectory_viewer.py
backend/: server.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  MessageDetails.tsx  ToolsPanel.tsx
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
test/: test_api.sh  test_memory_strategies.py
